--- a/styles/sass/partials/_sections.scss
+++ b/styles/sass/partials/_sections.scss
@@ -30,6 +30,8 @@ section {
 
 /* .announcements */ 
 .announcements {
+    max-width: 1200px;
+    margin: 0 auto;
     .img-container {
         margin-bottom: 20px;
         img {
@@ -38,6 +40,10 @@ section {
     }
 
     .container {
+        
+        &:not(:last-child) {
+            padding-bottom: 100px;
+        }
         &:nth-child(even) {
             img {
                 box-shadow: -10px 10px 1px $sunny-yellow;
@@ -49,6 +55,7 @@ section {
 /* info-nav styling */ 
 
 .info-nav {
+
     .info-block {
         display: flex;
         margin-bottom: 50px;
